Fix build for JDK 8 Motivation is BACK (thanks to spirrwell)